--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/node": "10.12.19",
     "@types/react": "16.7.22",
     "@types/react-dom": "16.0.11",
+    "aphrodite": "^2.2.3",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.3",
