--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "aphrodite": "^2.2.3",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-popup": "^0.9.3",
     "react-scripts": "2.1.3",
     "typescript": "3.2.4"
   },
